# backbone-application

./: .dockerignore  .env.prod.example  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  build.rs  docker-compose.yml  metaphor.codegen.yaml
.github/workflows/: release-image.yml  release.yml
config/: application-dev.yml  application-prod.yml  application.yml
deployment/: .env.dev.example  .env.prod.example  README.md  compose.dev.yaml  compose.yaml
deployment/backups/: pg-backup.sh  restic-check.sh  restic-push.sh
deployment/caddy/: Caddyfile
deployment/grafana/provisioning/alerting/: contact-points.yml  policies.yml  rules.yml
deployment/grafana/provisioning/dashboards/: dashboards.yml  golden-signals.json  host-resources.json  postgres-health.json
deployment/grafana/provisioning/datasources/: datasources.yml
deployment/loki/: loki-config.yaml
deployment/prometheus/: prometheus.yml
deployment/promtail/: promtail-config.yaml
docs/: README.md  background.md  contributing.md  developer-guide.md  glossary.md  maintainer-guide.md  philosophy.md  technology.md
docs/adr/: 0001-subprocess-dispatched-plugins.md  0002-schema-yaml-single-source-of-truth.md  0003-service-composes-no-business-logic.md  README.md
docs/architecture/: README.md  ai-guidelines.md  clean-code.md  ddd.md  layers.md  overview.md  solid.md
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
schema/models/: sysparam.model.yaml
scripts/: bump-prod-tag.sh  deploy-service.sh  preflight-prod.sh  rls_app_role.sql
src/: main.rs
src/configuration/: mod.rs
src/infrastructure/: mod.rs
src/infrastructure/database/: connection.rs  mod.rs
src/infrastructure/database/migrations/: mod.rs
src/middleware/: cors.rs  mod.rs
src/shared/: error.rs  mod.rs  pagination.rs  response.rs
